--- a/01-primeros-pasos/styles/estilos.css
+++ b/01-primeros-pasos/styles/estilos.css
@@ -1,27 +1,23 @@
 /*Estilos Navegación y Barra de búsqueda*/
-body{
-    background-color: rgb(236, 237, 238);
-    padding: 0px 15px 0px 15px;
-}
 .nav-title {
-    color: rgb(57, 34, 227);
     text-align: center;
     font-size: 30px;
 }
 .navbar {
-    background-color: rgb(211, 211, 211);
-    padding: 15px;
-}
-.navbar, .navbar a{
-    font-size: large;
     display: flex;
-    justify-content: space-around;
-    list-style-type: none;
-    text-decoration: none;
-    color: rgb(47, 47, 49);
+    align-items: center;
+    justify-content: space-between;
+    height: 8rem;
 }
-.navbar a:hover {
-    color: rgb(53, 116, 242);
+
+.navbar h1, .navbar ul {
+    margin: 0 2rem;
+}
+
+.nav-items {
+    display: flex;
+    gap: 5rem;
+    justify-content: space-between;
 }
 
 /*Rick y Morty Estilos*/
@@ -31,23 +27,6 @@ body{
     flex-wrap: wrap;
     gap: 20px; /* Espacio entre cards */
     padding: 10px;
-}
-.div-rym {
-    text-align: center;
-    padding: 5px;
-    border: 2px solid black;
-    width: 300px;
-}
-
-.div-rym h2{
-    color: rgb(42, 80, 235);
-}
-
-.div-rym-especial {
-    text-align: center;
-    padding: 5px;
-    border: 2px solid black;
-    width: 300px;
 }
 
 .span-block {
